# k-path-graphs-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_special_sequence_generation.py  setup.py
notebooks/: generate_and_analyze_k_path_graphs.ipynb
src/: __init__.py  analyzers.py  converters.py  generators.py  paths.py
